# wowlet

./: .drone.yml  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Dockerfile  Dockerfile.android  Dockerfile.windows  Dockerfile.windows_mxe  HACKING.md  Makefile  README.md  SECURITY.md
cmake/: Deploy.cmake  GenVersion.cmake  VersionMonero.cmake  VersionWowlet.cmake  config-wowlet.h.cmake
contrib/: PKGBUILD  build-appimage.sh  build-deb.sh
contrib/debian/: build-deb.sh  control
contrib/openvr/: CMakeLists.txt  README.md
contrib/openvr/headers/: openvr_capi.h
contrib/openvr/src/: openvr_api_public.cpp
contrib/openvr/src/vrcommon/: pathtools_public.cpp  strtools_public.cpp  vrpathregistry_public.cpp
docs/: BUILDING.md  HACKING.md  SECURITY.md
src/: CMakeLists.txt  appcontext.cpp  appcontext.h  assets.qrc  calcwidget.cpp  cli.cpp  cli.h  coinswidget.h  config-feather.h  contactswidget.cpp  contactswidget.h  globals.h  historywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receivewidget.h  sendwidget.cpp  settings.cpp  settings.h  settings.ui  xmrtowidget.cpp
src/QR-Code-scanner/: CMakeLists.txt  Decoder.cpp  Decoder.h
src/assets/: about.txt  ack.txt  control  copyright  feather-wow.desktop  nodes.json  org.wowlet.wowlet.desktop  org.wowlet.wowlet.metainfo.xml  restore_heights_wownero_mainnet.txt  wowlet.1.md  wowlet.desktop  wowllet.desktop
src/assets/images/appicons/: appicon.icns
src/dialog/: WalletCacheDebugDialog.h  aboutdialog.cpp  aboutdialog.ui  balancedialog.h  broadcasttxdialog.h  contactsdialog.h  debuginfodialog.cpp  debuginfodialog.h  debuginfodialog.ui  keysdialog.h  outputinfodialog.cpp  outputinfodialog.h  outputsweepdialog.h  passwordchangedialog.h  passworddialog.h  qrcodedialog.h  seeddialog.cpp  seeddialog.h  signverifydialog.h  torinfodialog.h  transactioninfodialog.h  txconfadvdialog.h  txconfdialog.cpp  txconfdialog.h  tximportdialog.h  updatedialog.cpp  updatedialog.h  updatedialog.ui  verifyproofdialog.cpp  verifyproofdialog.h  viewonlydialog.cpp  viewonlydialog.h  walletinfodialog.cpp  walletinfodialog.h
src/libwalletqt/: AddressBook.cpp  AddressBook.h  AddressBookInfo.h  Coins.h  CoinsInfo.h  ConstructionInfo.h  Input.h  PendingTransactionInfo.h  Ring.h  TransactionHistory.cpp  TransactionHistory.h  TransactionInfo.cpp  Wallet.cpp  Wallet.h  WalletManager.h
src/mobile/: README.md  main.cpp  main.h  main.qml  qml.qrc
src/model/: AddressBookModel.cpp  AddressBookModel.h  AddressBookProxyModel.h  CCSModel.cpp  CCSModel.h  CoinsModel.h  CoinsProxyModel.h  ForumModel.cpp  ForumModel.h  ModelUtils.h  NodeModel.cpp  NodeModel.h  RedditModel.h  SubaddressProxyModel.h  SubaddressView.h  TransactionHistoryModel.cpp  TransactionHistoryModel.h  TransactionHistoryProxyModel.h
src/openpgp/: CMakeLists.txt
src/ui/BreezeStyleSheets/: breeze.qrc  wow.qss
src/ui/qml/: mining.qml
src/utils/: ColorScheme.h  FeatherSeed.h  RestoreHeightLookup.h  WowletSeed.h  childproc.h  config.cpp  config.h  daemonrpc.h  keysfiles.cpp  keysfiles.h  networking.cpp  networking.h  nodes.cpp  nodes.h  prices.cpp  prices.h  tails.cpp  tor.cpp  tor.h  txfiathistory.h  utils.cpp  utils.h  whonix.h  wsclient.cpp  wsclient.h  wsserver.cpp  wsserver.h  xmrig.cpp  xmrig.h
src/vr/: main.cpp  main.h  main.qml  main2.qml  openvr_init.cpp  openvr_init.h  overlaycontroller.cpp  overlaycontroller.h  qml.qrc  qml.rcc
src/vr/assets/: themes.json
src/vr/qml/: AboutPage.qml  CreateWalletDialog.qml  DashboardPage.qml  SettingsPage.qml  WalletPage.qml
src/vr/qml/common/: BackgroundGradientDebug.qml  FullWidthSliderBox.qml  HourComboBox.qml  ImageMask.qml  LineSeparator.qml  MinuteSecondComboBox.qml  MyComboBox.qml  MyDialogOkCancelPopup.qml  MyDialogOkPopup.qml  MyNumPad.qml  MyNumPadButton.qml  MyNumPadSendAmount.qml  MyPushButton.qml  MyResources.qml  MySlider.qml  MyStackViewPage.qml  MyText.qml  MyTextField.qml  MyToggleButton.qml  Style.qml  TimeAssembly.qml  mainwidget.qml
src/vr/qml/wallet/: HistoryTable.qml  ReceivePage.qml  WalletDashBoardPage.qml
src/vr/qml/wallet/send/: SendPage.qml  SendPageDashboard.qml  SendPageDashboardButton.qml  SendPageNavBack.qml  SendPagePIN.qml  SendPageQR.qml  SendPageTransfer.qml
src/vr/utils/: paths.cpp  paths.h
src/widgets/: CCSEntry.h  ForumPost.h  PayToEdit.h  RedditPost.h  ccsprogressdelegate.cpp  ccsprogressdelegate.h  forumwidget.cpp  forumwidget.h  forumwidget.ui  nodewidget.cpp  nodewidget.h  restoreheightwidget.ui  suchwowwidget.cpp  suchwowwidget.h  suchwowwidget.ui  tickerwidget.cpp  tickerwidget.h  txproofwidget.h  xmrigwidget.cpp  xmrigwidget.h  xmrigwidget.ui
src/wizard/: createwallet.h  createwalletseed.cpp  createwalletseed.h  menu.cpp  menu.h  menu.ui  network.cpp  network.h  network.ui  openwallet.h  restorewallet.cpp  restorewallet.h  viewonlywallet.cpp  viewonlywallet.h  walletwizard.cpp  walletwizard.h
utils/: Info.plist  build_macos.sh
